# Kouse

./: .gitmodules  CMakeLists.txt  Cargo.toml  IOManager.cpp  LICENSE  README.md  configManager.h  main.cpp  network.cpp  network.h
Data/: data.cpp  data.h
Linux/: linuxMouse.cpp
Networking/: Client.cpp  Client.h  Server.cpp  Server.h
Windows/: winMouse.cpp  winMouse.h
src/: controllers.rs  data.rs  delegate.rs  gui.rs  main.cpp  main.rs  networking.rs  view.rs
src/Data/: Mouse.h  data.h
src/IOLib/: SIOS.cpp  SIOS.h
src/IOLib/SIOS/: SIOSDevices.cpp  SIOSDevices.h  SIOSEvent.cpp  SIOSEvent.h  SIOSIOManager.cpp  SIOSIOManager.h  SIOSKeyboard.cpp  SIOSKeyboard.h  SIOSMouse.cpp  SIOSMouse.h
src/Managers/: GUIManger.cpp  GUIManger.h  IOManager.cpp  IOManager.h  configManager.cpp
src/crossplatform/Linux/: Note  linuxMouse.cpp  linuxMouse.h
src/crossplatform/Mac/: macMouse.cpp  macMouse.h
src/crossplatform/Windows/: winMouse.cpp  winMouse.h
