[package]
name = "Kouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7", features = ["im"]}
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.0.14"
tokio = { version = "1.24.1", features = ["full"] }